# llm-product-search

./: README.md  pyproject.toml
src/http-server/: main.py
src/indexer/: index_script.py
